microk8s/staging/pihole/pihole.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      volumes:
      - name: pihole-local-etc-volume
        persistentVolumeClaim:
          claimName: pihole-local-etc-claim
      - name: pihole-local-dnsmasq-volume
        persistentVolumeClaim:
          claimName: pihole-local-dnsmasq-claim
      - name: dnsmasq-custom-hosts-volume
        configMap:
          name: dnsmasq-hosts
          items:
          - key: 10-custom-hosts.conf
            path: 10-custom-hosts.conf
          - key: custom.list
            path: custom.list
      containers:
      - name: pihole
        image: pihole/pihole:latest
        ports:
        - name: web
          containerPort: 80
        - name: dns-udp
          protocol: UDP
          containerPort: 53
        - name: dns-tcp
          protocol: TCP
          containerPort: 53
        volumeMounts:
        - mountPath: /etc/pihole
          name: pihole-local-etc-volume
        - mountPath: /etc/dnsmasq.d
          name: pihole-local-dnsmasq-volume
        - mountPath: /etc/dnsmasq.d/10-custom-hosts.conf
          name: dnsmasq-custom-hosts-volume
          subPath: 10-custom-hosts.conf
        - mountPath: /etc/pihole/custom.list
          name: dnsmasq-custom-hosts-volume
          subPath: custom.list
