microk8s/staging/pihole/pihole-ing.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: pihole
spec:
  stripPrefix:
    prefixes:
    - /pihole

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: pihole
spec:
  redirectRegex:
    regex: ^https://hal.rask.dk/pihole(/|/admin)?$
    replacement: https://hal.rask.dk/pihole/admin/

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entrypoints:
  - https
  routes:
  - match: Host(`hal.rask.dk`) && PathPrefix(`/pihole`)
    kind: Rule
    services:
    - name: pihole-tcp
      port: 80
    middlewares:
    - name: redirect
    - name: stripprefix
  tls:
    certResolver: default
